# django-wingman

./: README.md  pyproject.toml  setup.py
core/: admin.py  apps.py  decorators.py  models.py  signals.py
core/tests/: test_decorators.py
tests/: test_models.py  test_signals.py
wingman/: admin.py  apps.py  decorators.py  signals.py
wingman/migrations/: 0001_initial.py
wingman/tests/: test_decorators.py  test_models.py  test_signals.py
