[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wingman"
version = "0.1.0"
description = "A reusable Django library for managing feature flags with caching."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Fauzan", email = "muqhul@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 4.0",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "django>=3.2",
    "django-simple-history>=2.10",
]

# Move the repository and homepage to the [project.urls] section
[project.urls]
homepage = "https://grandimam.com"
repository = "https://github.com/grandimam/wingman"

[tool.setuptools.packages.find]
where = ["core"]
